--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 <div id="myapp"></div>
 <script>
-  var app = Elm.CaveVsCave.init({
+  var app = Elm.Main.init({
     node: document.getElementById('myapp')
   });
 </script>
